# metaphor-plugin-schema

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: README.md  cli-reference.md  codegen-module-wiring-gaps.md  ddd-guide.md  generate-kotlin.md  generate-rust.md  generate-webapp.md  getting-started.md  schema-format.md  schema-per-module-proposal.md  schema-per-module-triage.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_hook_yaml.rs  fuzz_model_yaml.rs  fuzz_workflow_yaml.rs
src/: lib.rs  main.rs  utils.rs
src/ast/: authorization.rs  expressions.rs  hook.rs  mod.rs  model.rs  types.rs  workflow.rs
src/commands/: kotlin.rs  mod.rs  schema.rs  webapp.rs  workspace.rs
src/commands/schema/: changed.rs  diff.rs  discovery.rs  doctor.rs  generate.rs  manifest.rs  migration_cmd.rs  migrations.rs  mod.rs  module_loader.rs  openapi_collect.rs  parse.rs  undeclared.rs  validate.rs  validate_workspace.rs  watch.rs
src/generators/: app_state.rs  audit_triggers.rs  auth.rs  bulk_operations.rs  computed.rs  config.rs  cqrs.rs  domain_service.rs  dto.rs  event_store.rs  event_subscription.rs  events.rs  export.rs  flow.rs  graphql.rs  grpc.rs  handler.rs  handlers_module.rs  integration.rs  integration_test.rs  mod.rs  module.rs  openapi.rs  projection.rs  proto.rs  repository.rs  repository_trait.rs  routes_composer.rs  rust.rs  seeder.rs  service.rs  specification.rs  sql.rs  state_machine.rs  trigger.rs  usecase.rs  validator.rs  value_object.rs  versioning.rs
src/git/: mod.rs
src/kotlin/: config.rs  error.rs  mod.rs  package_detector.rs
src/kotlin/generators/: mod.rs
src/kotlin/lang/: mod.rs
src/merge/: mod.rs  openapi_merger.rs  section_markers.rs
src/migration/: database_introspector.rs  mod.rs  pipeline.rs  schema_diff.rs
src/parser/: lexer.rs  mod.rs  model_parser.rs  workflow_parser.rs
src/resolver/: cross_module_fk.rs  flow_resolver.rs  mod.rs  reference_resolver.rs  type_resolver.rs  validator.rs
src/webgen/: config.rs  config_file.rs  custom_blocks.rs  error.rs  mod.rs
tests/: ddd_integration_tests.rs
tests/integration/: ddd_parsing.rs  generator_pipeline.rs  mod.rs
(+94 files in other folders)
